--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bai tap tuan 08</title>
-    <link rel="stylesheet" href="/stt18_22686861_NgoThiMyKhanh_tuan8/CSS/bootstrap.min.css">
-    <script src="/stt18_22686861_NgoThiMyKhanh_tuan8/JS/jquery-3.7.1.min.js"></script>
-    <script src="/stt18_22686861_NgoThiMyKhanh_tuan8/JS/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="CSS/bootstrap.min.css">
+    <script src="JS/jquery-3.7.1.min.js"></script>
+    <script src="JS/bootstrap.min.js"></script>
     <style>
         li {
             width: 150px;
