--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bai tap tuan 08</title>
-    <link rel="stylesheet" href="https://mykhanhhoa358.github.io/stt18_22686861_NgoThiMyKhanh_tuan8/CSS/bootstrap.min.css">
+    <link rel="stylesheet" type=“text/css”  href="https://mykhanhhoa358.github.io/stt18_22686861_NgoThiMyKhanh_tuan8/CSS/bootstrap.min.css">
     <script src="https://mykhanhhoa358.github.io/stt18_22686861_NgoThiMyKhanh_tuan8/JS/jquery-3.7.1.min.js"></script>
     <script src="https://mykhanhhoa358.github.io/stt18_22686861_NgoThiMyKhanh_tuan8/JS/bootstrap.min.js"></script>
     <style>
