--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bai tap tuan 08</title>
-    <link rel="stylesheet" href="https://mykhanhhoa358.github.io/stt18_22686861_NgoThiMyKhanh_tuan8/css/bootstrap.min.css">
-    <script src="https://mykhanhhoa358.github.io/stt18_22686861_NgoThiMyKhanh_tuan8/jquery-3.5.1.min.js"></script>
-    <script src="https://mykhanhhoa358.github.io/stt18_22686861_NgoThiMyKhanh_tuan8/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <style>
         li {
             width: 150px;
